--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 USER_CNPJ=00.000.000/0000-00
 USER_PASS=
-USER_SERVICE_CODE=
+USER_SERVICE_CODE=11972
 
 COMPANY_CNPJ=00.000.000/0000-00
 COMPANY_NAME=
 COMPANY_ZIP_CODE=00.000-000
+COMPANY_STREET=
 COMPANY_DISTRICT=
 COMPANY_CITY=
 COMPANY_EMAIL=
